GAIM: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.11.0:
	* Minor GUI changes
	* ICQ Alias problem fixed
	* Negative times fixed

version 0.11.0-pre4:
	* ICQ upgraded to use icqlib 1.1.0
	* An enormous amount of bug fixes
	* Even More Protocol Plugins:
		Jabber (plugins/jabber)
		Napster (plugins/napster.c)
	* Fixed a segfault with 'Ignore new conversations while away'

version 0.11.0-pre3 (12/15/2000):
	* Away messages arranged alphabetically (Thanks Justin)
	* More GUI adjustments
	* Can optionally run command to play sound files
	* Icons for ICQ plugin (blatently stolen from GnomeICU)
	* Icons for Yahoo plugin (not-so-blatently stolen from GTKYahoo)
	* Optionally display warning level next to name in buddy list
	* Optionally ignore fonts on incoming messages
	* Command-line option to automatically set yourself as
	  away upon signon (thanks bmiller)
	* Buddy list backups now stored in ~/.gaim/SN.protocol.blist (gaim will
	  move the old file for you). Needed for when you have the same name on
	  two different protocols. (Oscar and TOC share the same file.)
	* More Protocol plugins:
		MSN (plugins/msn)

version 0.11.0-pre2 (12/04/2000):
	* Fixed a segfault with a bad util.c 

version 0.11.0-pre1 (12/03/2000):
	* Multiple connections
	* Protocol plugins:
		IRC (plugins/irc.c)
		Yahoo (plugins/yay)
		ICQ (plugins/icq)
	* Logs now stored to ~/.gaim/logs rather than ~/.gaim/SN/
	* User configurable sounds
	* Scroll bar now functions properly in chat room user lists
	* X-Idle support added (thanks bmiller and bryner)
	* small change in the way away messages are displayed
	  (Thanks Ryan C. Gordon)
	* Plugin system uses GModule now (improves portability, adds features)
	  (Requires recompile and probably modifications of most plugins)
	* Perl got updates (reread plugins/PERL-HOWTO)
	* Spell checker now uses gtkspell
	* Auto-Away (thanks, yet again, to bmiller ;)
	* More buddy pounce options
	* Various GUI improvements

version 0.10.3 (10/09/2000):